--- a/today.tex
+++ b/today.tex
@@ -1,5 +1,5 @@
 \documentclass[]{article}
-
+\usepackage{CJK}
 %%%%%%%%%%%%
 % Document %
 %%%%%%%%%%%%
@@ -10,7 +10,7 @@
 \maketitle
 
 \begin{abstract}
-It is my first step to latex.It is time \textbf{3:00 am} and still writing in little latex :) 
+It is my first step to latex.It is time \textbf{3:00 am} and still writing in little latex :)
 $\sqrt{i}$ is still imaginary Here in Earth this time :D
 \end{abstract}
 \end{document}
